--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "ui",
+	"name": "@kayord/ui",
+	"private": false,
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -51,12 +52,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.32.2"
-	},
-	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"type": "module",
-	"dependencies": {
+		"vitest": "^0.32.2",
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
 		"formsnap": "^0.1.4",
@@ -65,5 +61,8 @@
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
 		"zod": "^3.22.4"
-	}
+	},
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"type": "module"
 }
