--- a/package.json
+++ b/package.json
@@ -35,12 +35,17 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@sveltejs/package": "^2.0.0",
+		"@tailwindcss/forms": "^0.5.6",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.14",
+		"bits-ui": "^0.5.7",
+		"clsx": "^2.0.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"formsnap": "^0.1.4",
+		"lucide-svelte": "^0.284.0",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
@@ -48,18 +53,14 @@
 		"publint": "^0.1.9",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"sveltekit-superforms": "^1.8.0",
+		"tailwind-merge": "^1.14.0",
+		"tailwind-variants": "^0.1.14",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2",
-		"bits-ui": "^0.5.7",
-		"clsx": "^2.0.0",
-		"formsnap": "^0.1.4",
-		"lucide-svelte": "^0.284.0",
-		"sveltekit-superforms": "^1.8.0",
-		"tailwind-merge": "^1.14.0",
-		"tailwind-variants": "^0.1.14",
 		"zod": "^3.22.4"
 	},
 	"svelte": "./dist/index.js",
