--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -30,6 +30,12 @@
 	"peerDependencies": {
 		"svelte": "^4.0.0"
 	},
+	"dependencies": {
+		"bits-ui": "^0.5.7",
+		"clsx": "^2.0.0",
+		"formsnap": "^0.1.4",
+		"lucide-svelte": "^0.284.0"
+	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
@@ -39,13 +45,9 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.14",
-		"bits-ui": "^0.5.7",
-		"clsx": "^2.0.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.30.0",
-		"formsnap": "^0.1.4",
-		"lucide-svelte": "^0.284.0",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.0.3",
