--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.0.6",
+	"version": "0.0.7",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -34,7 +34,9 @@
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
 		"formsnap": "^0.1.4",
-		"lucide-svelte": "^0.284.0"
+		"lucide-svelte": "^0.284.0",
+		"sveltekit-superforms": "^1.8.0",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
@@ -55,15 +57,13 @@
 		"publint": "^0.2.3",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
-		"sveltekit-superforms": "^1.8.0",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.11",
-		"vitest": "^0.34.6",
-		"zod": "^3.22.4"
+		"vitest": "^0.34.6"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
