more package required fixes.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.0.7",
+	"version": "0.0.8",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -36,7 +36,9 @@
 		"formsnap": "^0.1.4",
 		"lucide-svelte": "^0.284.0",
 		"sveltekit-superforms": "^1.8.0",
-		"zod": "^3.22.4"
+		"zod": "^3.22.4",
+		"tailwind-merge": "^1.14.0",
+		"tailwind-variants": "^0.1.14"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
@@ -57,8 +59,6 @@
 		"publint": "^0.2.3",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
-		"tailwind-merge": "^1.14.0",
-		"tailwind-variants": "^0.1.14",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
