--- a/package.json
+++ b/package.json
@@ -36,32 +36,32 @@
 		"formsnap": "^0.1.4",
 		"lucide-svelte": "^0.284.0",
 		"sveltekit-superforms": "^1.8.0",
-		"zod": "^3.22.4",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
-		"tailwindcss": "^3.3.2"
+		"tailwindcss": "^3.3.3",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"@sveltejs/package": "^2.0.0",
+		"@playwright/test": "^1.38.1",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "^1.25.1",
+		"@sveltejs/package": "^2.2.2",
 		"@tailwindcss/forms": "^0.5.6",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.28.0",
+		"@typescript-eslint/eslint-plugin": "^6.7.4",
+		"@typescript-eslint/parser": "^6.7.4",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.50.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"postcss": "^8.4.24",
+		"eslint-plugin-svelte": "^2.34.0",
+		"postcss": "^8.4.31",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
 		"publint": "^0.2.3",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
 		"vite": "^4.4.11",
 		"vitest": "^0.34.6"
 	},
