--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.0.11",
+	"version": "0.0.12",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -38,7 +38,6 @@
 		"sveltekit-superforms": "^1.8.0",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
-		"tailwindcss": "^3.3.3",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
@@ -63,7 +62,8 @@
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"vite": "^4.4.11",
-		"vitest": "^0.34.6"
+		"vitest": "^0.34.6",
+		"tailwindcss": "^3.3.3"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
