--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,20 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "Bundler"
+		"moduleResolution": "Bundler",
+		"paths": {
+			"$lib": [
+				"./src/lib"
+			],
+			"$lib/*": [
+				"./src/lib/*"
+			],
+			"@": [
+				"./src"
+			],
+			"@/*": [
+				"./src/*"
+			]
+		}
 	}
 }
