--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.0.12",
+	"version": "0.0.13",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -45,7 +45,6 @@
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/kit": "^1.25.1",
 		"@sveltejs/package": "^2.2.2",
-		"@tailwindcss/forms": "^0.5.6",
 		"@typescript-eslint/eslint-plugin": "^6.7.4",
 		"@typescript-eslint/parser": "^6.7.4",
 		"autoprefixer": "^10.4.16",
@@ -59,11 +58,11 @@
 		"publint": "^0.2.3",
 		"svelte": "^4.2.1",
 		"svelte-check": "^3.5.2",
+		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"vite": "^4.4.11",
-		"vitest": "^0.34.6",
-		"tailwindcss": "^3.3.3"
+		"vitest": "^0.34.6"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
