--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,23 @@
 				"./src/lib/*"
 			]
 		}
-	}
+	},
+	"include": [
+		"./svelte-kit/ambient.d.ts",
+		"./svelte-kit/types/**/$types.d.ts",
+		"./vite.config.ts",
+		"./src/**/*.js",
+		"./src/**/*.ts",
+		"./src/**/*.svelte",
+		"./tests/**/*.js",
+		"./tests/**/*.ts",
+		"./tests/**/*.svelte"
+	],
+	"exclude": [
+		"./node_modules/**",
+		"./svelte-kit/[!ambient.d.ts]**",
+		"./src/service-worker.js",
+		"./src/service-worker.ts",
+		"./src/service-worker.d.ts"
+	]
 }
