--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.0.15",
+	"version": "0.0.16",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -35,37 +35,38 @@
 		"svelte": "^4.0.0"
 	},
 	"dependencies": {
-		"bits-ui": "^0.5.7",
+		"bits-ui": "^0.9.0",
 		"clsx": "^2.0.0",
-		"formsnap": "^0.1.4",
-		"lucide-svelte": "^0.284.0",
+		"formsnap": "^0.2.1",
+		"lucide-svelte": "^0.290.0",
 		"sveltekit-superforms": "^1.8.0",
-		"tailwind-merge": "^1.14.0",
-		"tailwind-variants": "^0.1.14",
+		"tailwind-merge": "^2.0.0",
+		"tailwind-variants": "^0.1.18",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.38.1",
+		"@playwright/test": "^1.39.0",
 		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.25.1",
+		"@sveltejs/kit": "^1.27.2",
 		"@sveltejs/package": "^2.2.2",
-		"@typescript-eslint/eslint-plugin": "^6.7.4",
-		"@typescript-eslint/parser": "^6.7.4",
+		"@typescript-eslint/eslint-plugin": "^6.9.1",
+		"@typescript-eslint/parser": "^6.9.1",
 		"autoprefixer": "^10.4.16",
-		"eslint": "^8.51.0",
+		"eslint": "^8.52.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.34.0",
+		"mode-watcher": "^0.0.5",
 		"postcss": "^8.4.31",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
-		"publint": "^0.2.3",
-		"svelte": "^4.2.1",
+		"publint": "^0.2.5",
+		"svelte": "^4.2.2",
 		"svelte-check": "^3.5.2",
-		"tailwindcss": "^3.3.3",
+		"tailwindcss": "^3.3.5",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
-		"vite": "^4.4.11",
+		"vite": "^4.5.0",
 		"vitest": "^0.34.6"
 	},
 	"svelte": "./dist/index.js",
