--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
 		"svelte": "^4.0.0"
 	},
 	"dependencies": {
-		"bits-ui": "^0.9.1",
+		"bits-ui": "^0.9.7",
 		"clsx": "^2.0.0",
+		"cmdk-sv": "^0.0.6",
 		"formsnap": "^0.4.1",
 		"lucide-svelte": "^0.292.0",
 		"mode-watcher": "^0.0.7",
-		"sveltekit-superforms": "^1.10.1",
+		"sveltekit-superforms": "^1.10.2",
 		"tailwind-merge": "^2.0.0",
 		"tailwind-variants": "^0.1.18",
 		"zod": "^3.22.4"
@@ -48,21 +49,21 @@
 	"devDependencies": {
 		"@playwright/test": "^1.39.0",
 		"@sveltejs/adapter-auto": "^2.1.1",
-		"@sveltejs/kit": "^1.27.3",
+		"@sveltejs/kit": "^1.27.6",
 		"@sveltejs/package": "^2.2.2",
-		"@typescript-eslint/eslint-plugin": "^6.10.0",
-		"@typescript-eslint/parser": "^6.10.0",
+		"@typescript-eslint/eslint-plugin": "^6.11.0",
+		"@typescript-eslint/parser": "^6.11.0",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.53.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.35.0",
 		"postcss": "^8.4.31",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^3.0.3",
-		"prettier-plugin-svelte": "^3.0.3",
+		"prettier": "^3.1.0",
+		"prettier-plugin-svelte": "^3.1.0",
 		"publint": "^0.2.5",
-		"svelte": "^4.2.2",
-		"svelte-check": "^3.5.2",
+		"svelte": "^4.2.3",
+		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
