--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.1",
 		"@sveltejs/package": "^2.2.3",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
 		"autoprefixer": "^10.4.16",
