--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,15 +9,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "Bundler",
-		"paths": {
-			"$lib": [
-				"./src/lib"
-			],
-			"$lib/*": [
-				"./src/lib/*"
-			]
-		}
+		"moduleResolution": "Bundler"
 	},
 	"include": [
 		"./svelte-kit/ambient.d.ts",
