--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -35,26 +35,27 @@
 		"svelte": "^4.0.0"
 	},
 	"dependencies": {
-		"@tanstack/svelte-table": "^8.11.0",
-		"bits-ui": "^0.11.8",
-		"clsx": "^2.0.0",
+		"bits-ui": "^0.13.0",
+		"clsx": "^2.1.0",
 		"cmdk-sv": "^0.0.12",
-		"formsnap": "^0.4.1",
-		"lucide-svelte": "^0.298.0",
+		"formsnap": "^0.4.2",
+		"lucide-svelte": "^0.303.0",
 		"mode-watcher": "^0.1.2",
-		"sveltekit-superforms": "^1.12.0",
-		"tailwind-merge": "^2.1.0",
+		"svelte-sonner": "^0.3.9",
+		"sveltekit-superforms": "^1.13.1",
+		"tailwind-merge": "^2.2.0",
 		"tailwind-variants": "^0.1.19",
+		"vaul-svelte": "^0.0.4",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.40.1",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.1",
-		"@sveltejs/package": "^2.2.3",
+		"@sveltejs/adapter-auto": "^3.0.1",
+		"@sveltejs/kit": "^2.0.6",
+		"@sveltejs/package": "^2.2.5",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@typescript-eslint/eslint-plugin": "^6.14.0",
-		"@typescript-eslint/parser": "^6.14.0",
+		"@typescript-eslint/eslint-plugin": "^6.17.0",
+		"@typescript-eslint/parser": "^6.17.0",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -63,14 +64,15 @@
 		"postcss-load-config": "^5.0.2",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"publint": "^0.2.6",
+		"publint": "^0.2.7",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
-		"tailwindcss": "^3.3.6",
+		"svelte-headless-table": "^0.18.0",
+		"tailwindcss": "^3.4.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
 		"vite": "^5.0.10",
-		"vitest": "^1.0.4"
+		"vitest": "^1.1.1"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
