--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"svelte": "^4.0.0"
 	},
 	"dependencies": {
+		"@internationalized/date": "^3.5.1",
 		"bits-ui": "^0.14.0",
 		"clsx": "^2.1.0",
 		"cmdk-sv": "^0.0.12",
