--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.2.6",
+	"version": "0.3.1",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -22,8 +22,16 @@
 			"svelte": "./dist/index.js"
 		},
 		"./utils/*": {
-			"types": "./dist/utils/*.d.ts",
-			"svelte": "./dist/utils/*.js"
+			"types": "./dist/utils.d.ts",
+			"svelte": "./dist/utils.js"
+		},
+		"./mode-watcher/*": {
+			"types": "./dist/mode-watcher.d.ts",
+			"svelte": "./dist/mode-watcher.js"
+		},
+		"./formsnap/*": {
+			"types": "./dist/formsnap.d.ts",
+			"svelte": "./dist/formsnap.js"
 		}
 	},
 	"files": [
