--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.3.2",
+	"version": "0.3.3",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -22,16 +22,16 @@
 			"svelte": "./dist/index.js"
 		},
 		"./utils": {
-			"types": "./dist/utils.d.ts",
-			"svelte": "./dist/utils.js"
+			"types": "./dist/utils/index.d.ts",
+			"default": "./dist/utils/index.js"
 		},
 		"./mode-watcher": {
-			"types": "./dist/mode-watcher.d.ts",
-			"svelte": "./dist/mode-watcher.js"
+			"types": "./dist/mode-watcher/index.d.ts",
+			"default": "./dist/mode-watcher/index.js"
 		},
 		"./formsnap": {
-			"types": "./dist/formsnap.d.ts",
-			"svelte": "./dist/formsnap.js"
+			"types": "./dist/formsnap/index.d.ts",
+			"default": "./dist/formsnap/index.js"
 		}
 	},
 	"files": [
