--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "Bundler"
+		"moduleResolution": "Bundler",
 	},
 	"include": [
 		"./svelte-kit/ambient.d.ts",
@@ -20,13 +20,13 @@
 		"./src/**/*.svelte",
 		"./tests/**/*.js",
 		"./tests/**/*.ts",
-		"./tests/**/*.svelte"
+		"./tests/**/*.svelte",
 	],
 	"exclude": [
 		"./node_modules/**",
 		"./svelte-kit/[!ambient.d.ts]**",
 		"./src/service-worker.js",
 		"./src/service-worker.ts",
-		"./src/service-worker.d.ts"
-	]
+		"./src/service-worker.d.ts",
+	],
 }
