Latest packages. New Carousel component.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.3.5",
+	"version": "0.3.6",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -11,8 +11,8 @@
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
 		"test:integration": "playwright test",
 		"test:unit": "vitest"
 	},
@@ -44,28 +44,29 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.5.1",
-		"bits-ui": "^0.14.0",
+		"bits-ui": "^0.15.1",
 		"clsx": "^2.1.0",
 		"cmdk-sv": "^0.0.13",
-		"formsnap": "^0.4.2",
-		"lucide-svelte": "^0.312.0",
+		"embla-carousel-svelte": "8.0.0-rc20",
+		"formsnap": "^0.4.3",
+		"lucide-svelte": "^0.315.0",
 		"mode-watcher": "^0.1.2",
 		"svelte-headless-table": "^0.18.1",
 		"svelte-sonner": "^0.3.11",
-		"sveltekit-superforms": "^1.13.3",
-		"tailwind-merge": "^2.2.0",
+		"sveltekit-superforms": "^1.13.4",
+		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.1.20",
-		"vaul-svelte": "^0.0.7",
+		"vaul-svelte": "^0.1.0",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.41.0",
-		"@sveltejs/adapter-auto": "^3.1.0",
-		"@sveltejs/kit": "^2.3.3",
+		"@playwright/test": "^1.41.1",
+		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/kit": "^2.5.0",
 		"@sveltejs/package": "^2.2.6",
 		"@sveltejs/vite-plugin-svelte": "^3.0.1",
-		"@typescript-eslint/eslint-plugin": "^6.19.0",
-		"@typescript-eslint/parser": "^6.19.0",
+		"@typescript-eslint/eslint-plugin": "^6.19.1",
+		"@typescript-eslint/parser": "^6.19.1",
 		"autoprefixer": "^10.4.17",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -80,7 +81,7 @@
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.11",
+		"vite": "^5.0.12",
 		"vitest": "^1.2.1"
 	},
 	"svelte": "./dist/index.js",
