--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.5.1",
+	"version": "0.5.2",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -47,16 +47,16 @@
 		"bits-ui": "^0.18.2",
 		"clsx": "^2.1.0",
 		"cmdk-sv": "^0.0.13",
-		"embla-carousel-svelte": "8.0.0-rc23",
+		"embla-carousel-svelte": "8.0.0",
 		"formsnap": "^0.5.0",
-		"lucide-svelte": "^0.336.0",
+		"lucide-svelte": "^0.338.0",
 		"mode-watcher": "^0.2.1",
 		"svelte-headless-table": "^0.18.2",
 		"svelte-sonner": "^0.3.18",
 		"sveltekit-superforms": "^2.5.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0",
-		"vaul-svelte": "^0.2.3",
+		"vaul-svelte": "^0.2.4",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
@@ -76,7 +76,7 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.1",
 		"publint": "^0.2.7",
-		"svelte": "^4.2.11",
+		"svelte": "^4.2.12",
 		"svelte-check": "^3.6.4",
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.6.2",
