--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.5.2",
+	"version": "0.6.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -44,16 +44,17 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.5.2",
-		"bits-ui": "^0.18.2",
+		"bits-ui": "^0.18.3",
 		"clsx": "^2.1.0",
 		"cmdk-sv": "^0.0.13",
 		"embla-carousel-svelte": "8.0.0",
-		"formsnap": "^0.5.0",
-		"lucide-svelte": "^0.338.0",
+		"formsnap": "^0.5.1",
+		"lucide-svelte": "^0.341.0",
 		"mode-watcher": "^0.2.1",
+		"paneforge": "^0.0.2",
 		"svelte-headless-table": "^0.18.2",
 		"svelte-sonner": "^0.3.18",
-		"sveltekit-superforms": "^2.5.0",
+		"sveltekit-superforms": "^2.6.2",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0",
 		"vaul-svelte": "^0.2.4",
@@ -62,13 +63,13 @@
 	"devDependencies": {
 		"@playwright/test": "^1.41.2",
 		"@sveltejs/adapter-auto": "^3.1.1",
-		"@sveltejs/kit": "^2.5.1",
+		"@sveltejs/kit": "^2.5.2",
 		"@sveltejs/package": "^2.2.7",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"@typescript-eslint/eslint-plugin": "^7.0.2",
-		"@typescript-eslint/parser": "^7.0.2",
+		"@typescript-eslint/eslint-plugin": "^7.1.0",
+		"@typescript-eslint/parser": "^7.1.0",
 		"autoprefixer": "^10.4.17",
-		"eslint": "^8.56.0",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"postcss": "^8.4.35",
