--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.8.12",
+	"version": "0.8.13",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -52,8 +52,8 @@
 		"mode-watcher": "^0.3.0",
 		"paneforge": "^0.0.4",
 		"svelte-headless-table": "^0.18.2",
-		"svelte-sonner": "^0.3.23",
-		"sveltekit-superforms": "^2.13.0",
+		"svelte-sonner": "^0.3.24",
+		"sveltekit-superforms": "^2.13.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
 		"vaul-svelte": "^0.3.0",
@@ -64,30 +64,31 @@
 		"@sveltejs/kit": "^2.5.7",
 		"@sveltejs/package": "^2.3.1",
 		"@sveltejs/vite-plugin-svelte": "^3.1.0",
-		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/jest-dom": "^6.4.5",
 		"@testing-library/svelte": "^5.1.0",
 		"@typescript-eslint/eslint-plugin": "^7.8.0",
 		"@typescript-eslint/parser": "^7.8.0",
 		"autoprefixer": "^10.4.19",
-		"eslint": "^9.1.1",
+		"eslint": "^9.2.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.38.0",
-		"happy-dom": "^14.7.1",
+		"happy-dom": "^14.10.1",
 		"postcss": "^8.4.38",
-		"postcss-load-config": "^5.0.3",
+		"postcss-load-config": "^5.1.0",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
 		"publint": "^0.2.7",
-		"svelte": "^4.2.15",
-		"svelte-check": "^3.7.0",
+		"svelte": "^4.2.16",
+		"svelte-check": "^3.7.1",
 		"tailwindcss": "^3.4.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.5",
-		"vite": "^5.2.10",
-		"vitest": "^1.5.3"
+		"vite": "^5.2.11",
+		"vitest": "^1.6.0"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
-	"type": "module"
+	"type": "module",
+	"packageManager": "pnpm@9.1.0+sha256.22e36fba7f4880ecf749a5ca128b8435da085ecd49575e7fb9e64d6bf4fad394"
 }
