--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^4.0.0"
+		"lucide-svelte": "^0.395.0",
+		"svelte": "^4.0.0 || ^5.0.0-next.1",
+		"sveltekit-superforms": "^2.15.1",
+		"zod": "^3.23.8"
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.5.4",
@@ -49,16 +52,13 @@
 		"cmdk-sv": "^0.0.17",
 		"embla-carousel-svelte": "8.1.5",
 		"formsnap": "^1.0.1",
-		"lucide-svelte": "^0.395.0",
 		"mode-watcher": "^0.3.1",
 		"paneforge": "^0.0.5",
 		"svelte-headless-table": "^0.18.2",
 		"svelte-sonner": "^0.3.24",
-		"sveltekit-superforms": "^2.15.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
-		"vaul-svelte": "^0.3.1",
-		"zod": "^3.23.8"
+		"vaul-svelte": "^0.3.1"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.2.2",
@@ -70,7 +70,7 @@
 		"@typescript-eslint/eslint-plugin": "^7.13.1",
 		"@typescript-eslint/parser": "^7.13.1",
 		"autoprefixer": "^10.4.19",
-		"eslint": "^9.5.0",
+		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.40.0",
 		"happy-dom": "^14.12.0",
@@ -79,7 +79,7 @@
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.4",
 		"publint": "^0.2.8",
-		"svelte": "^4.2.18",
+		"svelte": "5.0.0-next.158",
 		"svelte-check": "^3.8.1",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.6.3",
