--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.40.0",
 		"happy-dom": "^14.12.0",
+		"lucide-svelte": "^0.395.0",
 		"postcss": "^8.4.38",
 		"postcss-load-config": "^5.1.0",
 		"prettier": "^3.3.2",
