--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.9.4",
+	"version": "0.9.5",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -47,10 +47,10 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.5.4",
-		"bits-ui": "^0.21.10",
+		"bits-ui": "^0.21.11",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.17",
-		"embla-carousel-svelte": "8.1.5",
+		"embla-carousel-svelte": "8.1.6",
 		"formsnap": "^1.0.1",
 		"mode-watcher": "^0.3.1",
 		"paneforge": "^0.0.5",
@@ -58,39 +58,39 @@
 		"svelte-sonner": "^0.3.24",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
-		"vaul-svelte": "^0.3.1"
+		"vaul-svelte": "^0.3.2"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.2.2",
-		"@sveltejs/kit": "^2.5.17",
+		"@sveltejs/kit": "^2.5.18",
 		"@sveltejs/package": "^2.3.2",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@testing-library/jest-dom": "^6.4.6",
-		"@testing-library/svelte": "^5.1.0",
-		"@typescript-eslint/eslint-plugin": "^7.13.1",
-		"@typescript-eslint/parser": "^7.13.1",
+		"@testing-library/svelte": "^5.2.0",
+		"@typescript-eslint/eslint-plugin": "^7.15.0",
+		"@typescript-eslint/parser": "^7.15.0",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.40.0",
+		"eslint-plugin-svelte": "^2.41.0",
 		"happy-dom": "^14.12.3",
-		"lucide-svelte": "^0.395.0",
-		"postcss": "^8.4.38",
+		"lucide-svelte": "^0.399.0",
+		"postcss": "^8.4.39",
 		"postcss-load-config": "^5.1.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.5",
 		"publint": "^0.2.8",
 		"svelte": "5.0.0-next.158",
-		"svelte-check": "^3.8.1",
+		"svelte-check": "^3.8.4",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.2",
-		"vite": "^5.3.1",
+		"vite": "^5.3.2",
 		"vitest": "^1.6.0"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
+	"packageManager": "pnpm@9.5.0-beta.0+sha512.c2e60e7ed04e459591c982f2760cd8f7d1f48fe1ca4d46ccbbf8377df1eb2d077ace1e9d334b06250dddf23c03b4562858f77992b9a3bb4a93355aefd173df32"
 }
