--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.9.7",
+	"version": "0.9.8",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -49,13 +49,13 @@
 		"@internationalized/date": "^3.5.4",
 		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
-		"cmdk-sv": "^0.0.17",
+		"cmdk-sv": "^0.0.18",
 		"embla-carousel-svelte": "8.1.6",
 		"formsnap": "^1.0.1",
-		"mode-watcher": "^0.3.1",
+		"mode-watcher": "^0.4.0",
 		"paneforge": "^0.0.5",
 		"svelte-headless-table": "^0.18.2",
-		"svelte-sonner": "^0.3.25",
+		"svelte-sonner": "^0.3.27",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
 		"vaul-svelte": "^0.3.2"
@@ -67,30 +67,30 @@
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@testing-library/jest-dom": "^6.4.6",
 		"@testing-library/svelte": "^5.2.0",
-		"@typescript-eslint/eslint-plugin": "^7.16.0",
-		"@typescript-eslint/parser": "^7.16.0",
+		"@typescript-eslint/eslint-plugin": "^7.16.1",
+		"@typescript-eslint/parser": "^7.16.1",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.41.0",
+		"eslint-plugin-svelte": "^2.42.0",
 		"happy-dom": "^14.12.3",
-		"lucide-svelte": "^0.399.0",
+		"lucide-svelte": "^0.408.0",
 		"postcss": "^8.4.39",
 		"postcss-load-config": "^5.1.0",
-		"prettier": "^3.3.2",
+		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.5",
 		"publint": "^0.2.8",
 		"svelte": "5.0.0-next.158",
 		"svelte-check": "^3.8.4",
-		"tailwindcss": "^3.4.4",
+		"tailwindcss": "^3.4.6",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.3",
-		"vite": "^5.3.3",
-		"vitest": "^2.0.1"
+		"vite": "^5.3.4",
+		"vitest": "^2.0.3"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@9.5.0-beta.0+sha512.c2e60e7ed04e459591c982f2760cd8f7d1f48fe1ca4d46ccbbf8377df1eb2d077ace1e9d334b06250dddf23c03b4562858f77992b9a3bb4a93355aefd173df32"
+	"packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
 }
