--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.9.10",
+	"version": "0.9.12",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -47,12 +47,12 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.5.5",
-		"bits-ui": "^0.21.12",
+		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
 		"embla-carousel-svelte": "8.1.7",
 		"formsnap": "^1.0.1",
-		"mode-watcher": "^0.4.0",
+		"mode-watcher": "^0.4.1",
 		"paneforge": "^0.0.5",
 		"svelte-headless-table": "^0.18.2",
 		"svelte-sonner": "^0.3.27",
@@ -66,26 +66,26 @@
 		"@sveltejs/package": "^2.3.2",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@testing-library/jest-dom": "^6.4.8",
-		"@testing-library/svelte": "^5.2.0",
-		"@typescript-eslint/eslint-plugin": "^7.17.0",
-		"@typescript-eslint/parser": "^7.17.0",
+		"@testing-library/svelte": "^5.2.1",
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.43.0",
 		"happy-dom": "^14.12.3",
-		"lucide-svelte": "^0.414.0",
+		"lucide-svelte": "^0.417.0",
 		"postcss": "^8.4.40",
-		"postcss-load-config": "^5.1.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-tailwindcss": "^0.6.4",
 		"publint": "^0.2.9",
 		"svelte": "5.0.0-next.158",
 		"svelte-check": "^3.8.4",
-		"tailwindcss": "^3.4.6",
+		"tailwindcss": "^3.4.7",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.4",
-		"vite": "^5.3.4",
+		"vite": "^5.3.5",
 		"vitest": "^2.0.4"
 	},
 	"svelte": "./dist/index.js",
