--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.9.14",
+	"version": "0.9.15",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -50,7 +50,7 @@
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
-		"embla-carousel-svelte": "8.1.8",
+		"embla-carousel-svelte": "8.2.0",
 		"formsnap": "^1.0.1",
 		"mode-watcher": "^0.4.1",
 		"paneforge": "^0.0.5",
@@ -62,35 +62,35 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.2.4",
-		"@sveltejs/kit": "^2.5.22",
+		"@sveltejs/kit": "^2.5.24",
 		"@sveltejs/package": "^2.3.4",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@testing-library/jest-dom": "^6.4.8",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@testing-library/jest-dom": "^6.5.0",
 		"@testing-library/svelte": "^5.2.1",
-		"@typescript-eslint/eslint-plugin": "^8.1.0",
-		"@typescript-eslint/parser": "^8.1.0",
+		"@typescript-eslint/eslint-plugin": "^8.3.0",
+		"@typescript-eslint/parser": "^8.3.0",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.9.0",
+		"eslint": "^9.9.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.43.0",
-		"happy-dom": "^14.12.3",
-		"lucide-svelte": "^0.427.0",
+		"happy-dom": "^15.0.0",
+		"lucide-svelte": "^0.436.0",
 		"postcss": "^8.4.41",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.6",
-		"publint": "^0.2.9",
-		"svelte": "5.0.0-next.158",
-		"svelte-check": "^3.8.5",
+		"publint": "^0.2.10",
+		"svelte": "^5.0.0-next.238",
+		"svelte-check": "^3.8.6",
 		"tailwindcss": "^3.4.10",
-		"tslib": "^2.6.3",
+		"tslib": "^2.7.0",
 		"typescript": "^5.5.4",
-		"vite": "^5.4.0",
+		"vite": "^5.4.2",
 		"vitest": "^2.0.5"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@9.7.0+sha512.dc09430156b427f5ecfc79888899e1c39d2d690f004be70e05230b72cb173d96839587545d09429b55ac3c429c801b4dc3c0e002f653830a420fa2dd4e3cf9cf"
+	"packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
 }
