--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"@sveltejs/kit": "^2.5.26",
 		"@sveltejs/package": "^2.3.4",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@tanstack/svelte-table": "9.0.0-alpha.10",
 		"@testing-library/jest-dom": "^6.5.0",
 		"@testing-library/svelte": "^5.2.1",
 		"@typescript-eslint/eslint-plugin": "^8.4.0",
