--- a/package.json
+++ b/package.json
@@ -43,51 +43,52 @@
 		"lucide-svelte": ">= 0.400.0 < 1.0.0",
 		"svelte": "^4.0.0 || ^5.0.0-next.1",
 		"sveltekit-superforms": "^2.15.1",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"@tanstack/svelte-table": "^9.0.0-alpha.10"
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.5.5",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
-		"embla-carousel-svelte": "8.2.1",
+		"embla-carousel-svelte": "8.3.0",
 		"formsnap": "^1.0.1",
 		"mode-watcher": "^0.4.1",
 		"paneforge": "^0.0.5",
 		"svelte-headless-table": "^0.18.2",
-		"svelte-sonner": "^0.3.27",
+		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.2.1",
 		"vaul-svelte": "^0.3.2"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.2.4",
-		"@sveltejs/kit": "^2.5.26",
-		"@sveltejs/package": "^2.3.4",
+		"@sveltejs/adapter-auto": "^3.2.5",
+		"@sveltejs/kit": "^2.5.28",
+		"@sveltejs/package": "^2.3.5",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@tanstack/svelte-table": "9.0.0-alpha.10",
 		"@testing-library/jest-dom": "^6.5.0",
 		"@testing-library/svelte": "^5.2.1",
-		"@typescript-eslint/eslint-plugin": "^8.4.0",
-		"@typescript-eslint/parser": "^8.4.0",
+		"@typescript-eslint/eslint-plugin": "^8.6.0",
+		"@typescript-eslint/parser": "^8.6.0",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.10.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.43.0",
-		"happy-dom": "^15.7.3",
-		"lucide-svelte": "^0.439.0",
-		"postcss": "^8.4.45",
+		"eslint-plugin-svelte": "^2.44.0",
+		"happy-dom": "^15.7.4",
+		"lucide-svelte": "^0.441.0",
+		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.6",
-		"publint": "^0.2.10",
+		"publint": "^0.2.11",
 		"svelte": "^5.0.0-next.238",
-		"svelte-check": "^4.0.1",
-		"tailwindcss": "^3.4.10",
+		"svelte-check": "^4.0.2",
+		"tailwindcss": "^3.4.12",
 		"tslib": "^2.7.0",
-		"typescript": "^5.5.4",
-		"vite": "^5.4.3",
-		"vitest": "^2.0.5"
+		"typescript": "^5.6.2",
+		"vite": "^5.4.6",
+		"vitest": "^2.1.1"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
