--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.9.22",
+	"version": "0.10.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -40,11 +40,11 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
+		"@tanstack/svelte-table": "^9.0.0-alpha.10",
 		"lucide-svelte": ">= 0.400.0 < 1.0.0",
 		"svelte": "^4.0.0 || ^5.0.0-next.1",
 		"sveltekit-superforms": "^2.15.1",
-		"zod": "^3.23.8",
-		"@tanstack/svelte-table": "^9.0.0-alpha.10"
+		"zod": "^3.23.8"
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.5.5",
@@ -55,7 +55,6 @@
 		"formsnap": "^1.0.1",
 		"mode-watcher": "^0.4.1",
 		"paneforge": "^0.0.5",
-		"svelte-headless-table": "^0.18.2",
 		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.2.1",
