--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.10.2",
+	"version": "0.10.3",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -42,52 +42,54 @@
 	"peerDependencies": {
 		"@tanstack/svelte-table": "^9.0.0-alpha.10",
 		"lucide-svelte": ">= 0.400.0 < 1.0.0",
-		"svelte": "^4.0.0 || ^5.0.0-next.1",
+		"svelte": "^4.0.0 || ^5.0.0",
 		"sveltekit-superforms": "^2.15.1",
 		"zod": "^3.23.8"
 	},
 	"dependencies": {
-		"@internationalized/date": "^3.5.6",
-		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
-		"cmdk-sv": "^0.0.18",
-		"embla-carousel-svelte": "8.3.0",
-		"formsnap": "^1.0.1",
-		"mode-watcher": "^0.4.1",
-		"paneforge": "^0.0.6",
-		"svelte-sonner": "^0.3.28",
-		"tailwind-merge": "^2.5.3",
-		"tailwind-variants": "^0.2.1",
-		"vaul-svelte": "^0.3.2"
+		"tailwind-merge": "^2.5.4",
+		"tailwind-variants": "^0.2.1"
 	},
 	"devDependencies": {
+		"@internationalized/date": "^3.5.6",
 		"@sveltejs/adapter-auto": "^3.2.5",
-		"@sveltejs/kit": "^2.6.3",
+		"@sveltejs/kit": "^2.7.2",
 		"@sveltejs/package": "^2.3.5",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tanstack/svelte-table": "9.0.0-alpha.10",
-		"@testing-library/jest-dom": "^6.5.0",
-		"@testing-library/svelte": "^5.2.3",
-		"@typescript-eslint/eslint-plugin": "^8.8.1",
-		"@typescript-eslint/parser": "^8.8.1",
+		"@testing-library/jest-dom": "^6.6.2",
+		"@testing-library/svelte": "^5.2.4",
+		"@typescript-eslint/eslint-plugin": "^8.11.0",
+		"@typescript-eslint/parser": "^8.11.0",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.12.0",
+		"bits-ui": "^0.21.16",
+		"cmdk-sv": "^0.0.18",
+		"embla-carousel-svelte": "8.3.0",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.44.1",
+		"eslint-plugin-svelte": "^2.46.0",
+		"formsnap": "^1.0.1",
 		"happy-dom": "^15.7.4",
-		"lucide-svelte": "^0.451.0",
+		"lucide-svelte": "^0.453.0",
+		"mode-watcher": "^0.4.1",
+		"paneforge": "^0.0.6",
 		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"publint": "^0.2.11",
-		"svelte": "^5.0.0-next.238",
-		"svelte-check": "^4.0.4",
-		"tailwindcss": "^3.4.13",
-		"tslib": "^2.7.0",
+		"svelte": "^5.0.5",
+		"svelte-check": "^4.0.5",
+		"svelte-sonner": "^0.3.28",
+		"sveltekit-superforms": "^2.20.0",
+		"tailwindcss": "^3.4.14",
+		"tslib": "^2.8.0",
 		"typescript": "^5.6.3",
-		"vite": "^5.4.8",
-		"vitest": "^2.1.2"
+		"vaul-svelte": "^0.3.2",
+		"vite": "^5.4.9",
+		"vitest": "^2.1.3",
+		"zod": "^3.23.8"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
