--- a/package.json
+++ b/package.json
@@ -47,9 +47,18 @@
 		"zod": "^3.23.8"
 	},
 	"dependencies": {
+		"@internationalized/date": "^3.5.6",
+		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
+		"cmdk-sv": "^0.0.18",
+		"embla-carousel-svelte": "8.3.0",
+		"formsnap": "^1.0.1",
+		"mode-watcher": "^0.4.1",
+		"paneforge": "^0.0.6",
+		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.5.4",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"vaul-svelte": "^0.3.2"
 	},
 	"devDependencies": {
 		"@internationalized/date": "^3.5.6",
