--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.11.0",
+	"version": "0.11.1",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -47,24 +47,15 @@
 		"zod": "^3.23.8"
 	},
 	"dependencies": {
-		"@internationalized/date": "^3.5.6",
-		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
-		"cmdk-sv": "^0.0.18",
-		"embla-carousel-svelte": "8.3.0",
-		"formsnap": "^1.0.1",
-		"mode-watcher": "^0.4.1",
-		"paneforge": "^0.0.6",
-		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.5.4",
-		"tailwind-variants": "^0.2.1",
-		"vaul-svelte": "^0.3.2"
+		"tailwind-variants": "^0.2.1"
 	},
 	"devDependencies": {
 		"@internationalized/date": "^3.5.6",
-		"@sveltejs/adapter-auto": "^3.2.5",
+		"@sveltejs/adapter-auto": "^3.3.0",
 		"@sveltejs/kit": "^2.7.2",
-		"@sveltejs/package": "^2.3.5",
+		"@sveltejs/package": "^2.3.6",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tanstack/svelte-table": "9.0.0-alpha.10",
 		"@testing-library/jest-dom": "^6.6.2",
@@ -87,8 +78,8 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
-		"publint": "^0.2.11",
-		"svelte": "^5.0.5",
+		"publint": "^0.2.12",
+		"svelte": "^5.1.0",
 		"svelte-check": "^4.0.5",
 		"svelte-sonner": "^0.3.28",
 		"sveltekit-superforms": "^2.20.0",
@@ -96,7 +87,7 @@
 		"tslib": "^2.8.0",
 		"typescript": "^5.6.3",
 		"vaul-svelte": "^0.3.2",
-		"vite": "^5.4.9",
+		"vite": "^5.4.10",
 		"vitest": "^2.1.3",
 		"zod": "^3.23.8"
 	},
