--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.12.1",
+	"version": "0.12.2",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -43,10 +43,10 @@
 		"lucide-svelte": ">= 0.400.0 < 1.0.0",
 		"svelte": "^4.0.0 || ^5.0.0",
 		"sveltekit-superforms": "^2.15.1",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"@tanstack/table-core": "^8.20.5"
 	},
 	"dependencies": {
-		"@tanstack/table-core": "^8.20.5",
 		"clsx": "^2.1.1",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1"
