Latest packages and bits out of next

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.13.19",
+	"version": "0.13.20",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -49,12 +49,12 @@
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.7.0",
-		"bits-ui": "1.0.0-next.94",
+		"bits-ui": "1.1.0",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.5.2",
 		"formsnap": "2.0.0",
 		"mode-watcher": "^0.5.1",
-		"paneforge": "1.0.0-next.2",
+		"paneforge": "1.0.0-next.3",
 		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.1",
@@ -67,21 +67,21 @@
 		"@sveltejs/package": "^2.3.10",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/svelte": "^5.2.6",
+		"@testing-library/svelte": "^5.2.7",
 		"@typescript-eslint/eslint-plugin": "^8.24.0",
 		"@typescript-eslint/parser": "^8.24.0",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.20.0",
+		"eslint": "^9.20.1",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
-		"happy-dom": "^17.0.3",
+		"happy-dom": "^17.1.0",
 		"lucide-svelte": "^0.475.0",
 		"postcss": "^8.5.2",
-		"prettier": "^3.5.0",
+		"prettier": "^3.5.1",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"publint": "^0.3.4",
-		"svelte": "^5.19.9",
+		"publint": "^0.3.5",
+		"svelte": "^5.20.0",
 		"svelte-check": "^4.1.4",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
@@ -89,11 +89,11 @@
 		"typescript": "^5.7.3",
 		"vite": "^6.1.0",
 		"vitest": "^3.0.5",
-		"zod": "^3.24.1"
+		"zod": "^3.24.2"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@10.3.0+sha512.ee592eda8815a8a293c206bb0917c4bb0ff274c50def7cbc17be05ec641fc2d1b02490ce660061356bd0d126a4d7eb2ec8830e6959fb8a447571c631d5a2442d"
+	"packageManager": "pnpm@10.4.0+sha512.6b849d0787d97f8f4e1f03a9b8ff8f038e79e153d6f11ae539ae7c435ff9e796df6a862c991502695c7f9e8fac8aeafc1ac5a8dab47e36148d183832d886dd52"
 }
