--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 		"svelte": "^5.0.0",
 		"sveltekit-superforms": "^2.20.0",
 		"zod": "^3.23.8",
-		"@lucide-svelte": ">= 0.482.0 < 1.0.0"
+		"@lucide/svelte": ">= 0.482.0 < 1.0.0"
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.7.0",
