--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "0.15.0",
+	"version": "0.15.1",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -41,15 +41,15 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
+		"@lucide/svelte": ">= 0.482.0 < 1.0.0",
 		"@tanstack/table-core": "^8.20.5",
 		"svelte": "^5.0.0",
 		"sveltekit-superforms": "^2.20.0",
-		"zod": "^3.23.8",
-		"@lucide/svelte": ">= 0.482.0 < 1.0.0"
+		"zod": "^3.23.8"
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.7.0",
-		"bits-ui": "1.3.12",
+		"bits-ui": "1.3.13",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.5.2",
 		"formsnap": "2.0.0",
@@ -63,7 +63,7 @@
 	"devDependencies": {
 		"@lucide/svelte": "^0.482.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.19.1",
+		"@sveltejs/kit": "^2.20.0",
 		"@sveltejs/package": "^2.3.10",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/vite": "^4.0.14",
@@ -73,20 +73,20 @@
 		"@typescript-eslint/parser": "^8.26.1",
 		"eslint": "^9.22.0",
 		"eslint-config-prettier": "^10.1.1",
-		"eslint-plugin-svelte": "^3.1.0",
+		"eslint-plugin-svelte": "^3.3.1",
 		"happy-dom": "^17.4.4",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"publint": "^0.3.9",
-		"svelte": "^5.23.0",
+		"svelte": "^5.23.1",
 		"svelte-check": "^4.1.5",
 		"tailwindcss": "^4.0.14",
 		"tslib": "^2.8.1",
-		"tw-animate-css": "^1.2.0",
+		"tw-animate-css": "^1.2.2",
 		"typescript": "^5.8.2",
 		"vite": "^6.2.2",
-		"vitest": "^3.0.8",
+		"vitest": "^3.0.9",
 		"zod": "^3.24.2"
 	},
 	"svelte": "./dist/index.js",
