--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
 	"peerDependencies": {
 		"@lucide/svelte": ">= 0.482.0 < 1.0.0",
 		"@tanstack/table-core": "^8.20.5",
-		"layerchart": "2.0.0-next.6",
+		"layerchart": "^2.0.0-next.6",
 		"svelte": "^5.0.0",
 		"sveltekit-superforms": "^2.20.0",
 		"zod": "^3.23.8"
 	},
 	"dependencies": {
 		"@internationalized/date": "^3.8.2",
-		"bits-ui": "2.8.10",
+		"bits-ui": "2.8.11",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "8.6.0",
 		"formsnap": "2.0.1",
@@ -64,35 +64,35 @@
 	"devDependencies": {
 		"@lucide/svelte": "^0.525.0",
 		"@sveltejs/adapter-auto": "^6.0.1",
-		"@sveltejs/kit": "^2.22.2",
-		"@sveltejs/package": "^2.3.12",
-		"@sveltejs/vite-plugin-svelte": "^5.1.0",
+		"@sveltejs/kit": "^2.24.0",
+		"@sveltejs/package": "^2.4.0",
+		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@tailwindcss/vite": "^4.1.11",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.8",
 		"@testing-library/user-event": "^14.6.1",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
-		"@typescript-eslint/eslint-plugin": "^8.35.1",
-		"@typescript-eslint/parser": "^8.35.1",
+		"@typescript-eslint/eslint-plugin": "^8.37.0",
+		"@typescript-eslint/parser": "^8.37.0",
 		"d3-scale": "^4.0.2",
 		"d3-shape": "^3.2.0",
-		"eslint": "^9.30.1",
+		"eslint": "^9.31.0",
 		"eslint-config-prettier": "^10.1.5",
-		"eslint-plugin-svelte": "^3.10.1",
+		"eslint-plugin-svelte": "^3.11.0",
 		"happy-dom": "^18.0.1",
-		"layerchart": "2.0.0-next.6",
+		"layerchart": "2.0.0-next.30",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.6.13",
+		"prettier-plugin-tailwindcss": "^0.6.14",
 		"publint": "^0.3.12",
-		"svelte": "5.35.1",
+		"svelte": "5.36.4",
 		"svelte-check": "^4.2.2",
 		"tailwindcss": "^4.1.11",
 		"tslib": "^2.8.1",
-		"tw-animate-css": "1.3.4",
+		"tw-animate-css": "1.3.5",
 		"typescript": "^5.8.3",
-		"vite": "^7.0.1",
+		"vite": "^7.0.4",
 		"vitest": "^3.2.4",
 		"zod": "^3.25.71"
 	},
@@ -100,7 +100,7 @@
 	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"type": "module",
-	"packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
+	"packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"@tailwindcss/oxide",
