Making great progress splitting all out

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-	"cSpell.words": ["formsnap", "kayord", "lucide"]
+	"cSpell.words": [
+		"formsnap",
+		"kayord",
+		"layerchart",
+		"lucide",
+		"superforms",
+		"vaul"
+	]
 }
