--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@kayord/ui",
 	"private": false,
-	"version": "1.1.19",
+	"version": "2.0.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -31,13 +31,29 @@
 			"types": "./dist/mode-watcher/index.d.ts",
 			"default": "./dist/mode-watcher/index.js"
 		},
-		"./formsnap": {
-			"types": "./dist/formsnap/index.d.ts",
-			"default": "./dist/formsnap/index.js"
+		"./data-table": {
+			"types": "./dist/form/index.d.ts",
+			"default": "./dist/form/index.js"
+		},
+		"./form": {
+			"types": "./dist/form/index.d.ts",
+			"default": "./dist/form/index.js"
 		},
 		"./chart": {
 			"types": "./dist/chart/index.d.ts",
 			"default": "./dist/chart/index.js"
+		},
+		"./calendar": {
+			"types": "./dist/calendar/index.d.ts",
+			"default": "./dist/calendar/index.js"
+		},
+		"./carousel": {
+			"types": "./dist/carousel/index.d.ts",
+			"default": "./dist/carousel/index.js"
+		},
+		"./drawer": {
+			"types": "./dist/drawer/index.d.ts",
+			"default": "./dist/drawer/index.js"
 		}
 	},
 	"files": [
@@ -47,31 +63,54 @@
 	],
 	"peerDependencies": {
 		"@lucide/svelte": ">= 0.482.0 < 1.0.0",
-		"@tanstack/table-core": "^8.20.5",
-		"layerchart": "^2.0.0-next.6",
 		"svelte": "^5.0.0",
+		"layerchart": "^2.0.0-next.6",
+		"embla-carousel-svelte": "^8.6.0",
+		"@tanstack/table-core": "^8.20.5",
+		"vaul-svelte": "^1.0.0-next.7",
 		"sveltekit-superforms": "^2.27.1",
+		"@internationalized/date": "^3.10.0",
+		"formsnap": "^2.0.1",
 		"zod": "^4.0.5"
 	},
 	"peerDependenciesMeta": {
 		"layerchart": {
 			"optional": true
+		},
+		"embla-carousel-svelte": {
+			"optional": true
+		},
+		"@tanstack/table-core": {
+			"optional": true
+		},
+		"vaul-svelte": {
+			"optional": true
+		},
+		"sveltekit-superforms": {
+			"optional": true
+		},
+		"formsnap": {
+			"optional": true
+		},
+		"zod": {
+			"optional": true
+		},
+		"@internationalized/date": {
+			"optional": true
 		}
 	},
 	"dependencies": {
-		"@internationalized/date": "^3.10.0",
 		"bits-ui": "2.11.4",
 		"clsx": "^2.1.1",
-		"embla-carousel-svelte": "8.6.0",
-		"formsnap": "2.0.1",
-		"mode-watcher": "^1.1.0",
-		"paneforge": "1.0.2",
-		"svelte-sonner": "^1.0.5",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1",
-		"vaul-svelte": "1.0.0-next.7"
+		"mode-watcher": "^1.1.0",
+		"paneforge": "1.0.2",
+		"svelte-sonner": "^1.0.5"
 	},
 	"devDependencies": {
+		"formsnap": "^2.0.1",
+		"@internationalized/date": "^3.10.0",
 		"@lucide/svelte": "^0.545.0",
 		"@sveltejs/adapter-auto": "^6.1.1",
 		"@sveltejs/kit": "^2.46.4",
@@ -88,6 +127,7 @@
 		"@vitest/coverage-v8": "3.2.4",
 		"d3-scale": "^4.0.2",
 		"d3-shape": "^3.2.0",
+		"embla-carousel-svelte": "^8.6.0",
 		"eslint": "^9.37.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
@@ -106,6 +146,7 @@
 		"typescript": "^5.9.3",
 		"vite": "^7.1.9",
 		"vitest": "^3.2.4",
+		"vaul-svelte": "1.0.0-next.7",
 		"zod": "4.1.12"
 	},
 	"svelte": "./dist/index.js",
