fix: update version to 2.0.1 and correct exports paths in package.json; tidy up .prettierignore and settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,3 @@
 {
-	"cSpell.words": [
-		"formsnap",
-		"kayord",
-		"layerchart",
-		"lucide",
-		"paneforge",
-		"superforms",
-		"vaul"
-	]
+	"cSpell.words": ["formsnap", "kayord", "layerchart", "lucide", "paneforge", "superforms", "vaul"]
 }
