new search param types.

--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
 		"prettier-plugin-svelte": "^3.4.1",
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"publint": "^0.3.16",
+		"runed": "^0.37.1",
 		"svelte": "5.46.3",
 		"svelte-check": "^4.3.5",
 		"svelte-sonner": "^1.0.7",
